[gd_scene load_steps=3 format=3 uid="uid://t1ct4iffghm0"]

[ext_resource type="Script" path="res://GDScripts/pause_menu.gd" id="1_gmusc"]
[ext_resource type="Script" path="res://GDScripts/button.gd" id="2_t5whm"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gmusc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -293.0
offset_right = 331.0
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pause"

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../SaveButton")
text = "Resume"
script = ExtResource("2_t5whm")

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../LoadButton")
text = "Save"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../SaveButton")
focus_neighbor_bottom = NodePath("../MainMenuButton")
text = "Load"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../LoadButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
text = "Skip to main menu"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
